--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -7,6 +7,7 @@
     // default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --text-color: #333;
 }
 * {
     box-sizing: border-box;
@@ -21,4 +22,15 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+}
+
+button,
+input,
+[tabindex] {
+    outline: none;
+    border: none;
+}
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
