--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -38,6 +38,12 @@
     }
 }
 
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
+}
+
 // Button tupes
 .primary {
     background-color: var(--primary);
