--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,11 +4,12 @@
 :root {
     --primary: #fe2c55;
     --white: #fff;
+    --text-color: #161823;
 
     // default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
-    --text-color: #333;
+    --default-layout-horizontal-spacer: 24px;
 }
 * {
     box-sizing: border-box;
@@ -34,4 +35,25 @@ input,
 a[href] {
     color: var(--text-color);
     text-decoration: none;
+}
+
+// custom tippy tooltip
+body {
+    .tippy-box {
+        background-color: rgba(84, 84, 84, 0.92);
+        border-radius: 8px;
+        font-weight: 600;
+        font-size: 1.6rem;
+        line-height: 2.2rem;
+    }
+    .tippy-arrow {
+        color: rgba(84, 84, 84, 0.92);
+    }
+    .tippy-content {
+        padding: 8px 9px;
+    }
+
+    .tippy-box[data-placement^='bottom'] > .tippy-arrow:before {
+        top: -8px;
+    }
 }
